[gd_scene load_steps=2 format=3 uid="uid://bjo34bxogtql8"]

[ext_resource type="Script" uid="uid://cpiseqa5lg1db" path="res://Day 51 - 60/Scripts/day_52.gd" id="1_62vtm"]

[node name="Day52" type="Node2D"]
script = ExtResource("1_62vtm")

[node name="Items" type="Node2D" parent="."]

[node name="Background" type="ColorRect" parent="Items"]
offset_right = 1153.0
offset_bottom = 644.0
color = Color(0, 0, 0, 1)

[node name="Coins" type="Label" parent="Items"]
offset_left = 26.0
offset_top = 17.0
offset_right = 212.0
offset_bottom = 86.0
theme_override_font_sizes/font_size = 50
text = "Coins:"

[node name="Item1" type="Node2D" parent="Items"]

[node name="ItemLabel" type="Label" parent="Items/Item1"]
offset_left = 129.0
offset_top = 185.0
offset_right = 385.0
offset_bottom = 254.0
theme_override_font_sizes/font_size = 50
text = "Item #1 $1"

[node name="TextEdit" type="TextEdit" parent="Items/Item1"]
offset_left = 204.0
offset_top = 267.0
offset_right = 316.0
offset_bottom = 312.0
placeholder_text = "Ammount"

[node name="Item1Button" type="Button" parent="Items/Item1"]
offset_left = 189.0
offset_top = 323.0
offset_right = 332.0
offset_bottom = 376.0
text = "Buy"

[node name="Item2" type="Node2D" parent="Items"]
position = Vector2(280, 0)

[node name="ItemLabel" type="Label" parent="Items/Item2"]
offset_left = 142.0
offset_top = 186.0
offset_right = 398.0
offset_bottom = 255.0
theme_override_font_sizes/font_size = 50
text = "Item #2 $5"

[node name="TextEdit" type="TextEdit" parent="Items/Item2"]
offset_left = 218.0
offset_top = 266.0
offset_right = 330.0
offset_bottom = 311.0
placeholder_text = "Ammount"

[node name="Item2Button" type="Button" parent="Items/Item2"]
offset_left = 196.0
offset_top = 321.0
offset_right = 339.0
offset_bottom = 374.0
text = "Buy"

[node name="Item3" type="Node2D" parent="Items"]
position = Vector2(576, 0)

[node name="ItemLabel" type="Label" parent="Items/Item3"]
offset_left = 178.0
offset_top = 185.0
offset_right = 364.0
offset_bottom = 254.0
theme_override_font_sizes/font_size = 50
text = "Item #3 $10"

[node name="TextEdit" type="TextEdit" parent="Items/Item3"]
offset_left = 244.0
offset_top = 268.0
offset_right = 356.0
offset_bottom = 313.0
placeholder_text = "Ammount"

[node name="Item3Button" type="Button" parent="Items/Item3"]
offset_left = 231.0
offset_top = 319.0
offset_right = 374.0
offset_bottom = 372.0
text = "Buy"

[connection signal="pressed" from="Items/Item1/Item1Button" to="." method="_on_item_1_button_pressed"]
[connection signal="pressed" from="Items/Item2/Item2Button" to="." method="_on_item_2_button_pressed"]
[connection signal="pressed" from="Items/Item3/Item3Button" to="." method="_on_item_3_button_pressed"]
